--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 	margin-top: 5%;
 }
 .seccion2{
-	margin-top: 8%;
+	margin-top: 6%;
 }
 
 h1{
@@ -15,13 +15,9 @@ h1{
 }
 .subtitulo2{
 	font-size: 20px;
-	margin-top: 39%;
+	margin-top: 58%;
 }
-.seccion4{
-	margin-top: 5%;
-	border: solid 1px gray;
-	border-radius: 15px;
-}
+
 .logo{
 	display: block;
 	margin:auto;
@@ -30,9 +26,12 @@ h1{
 .textofinal{
 	margin-top: 5%;
 }
-.seccion2{
-	margin-top: 5%;
+.cuadro{
+	margin-top: 4%;
 	border: solid 1px gray;
 	border-radius: 15px;
-	padding: 5%;
+	padding: 3%;
+}
+.seccion4{
+	margin-top: 2%;
 }
